dove.styles.css
:root {
    --_SAKURA_PINK: #f9c6d4;
    --_CLOUD_WHITE: #faf9f6;
    --_LIGHT_PINK: #FFE5ee;
    --_MID_PINK: #efd7df;

    --_DARK_PINK: #FFD7EC;
    --_PINK: #f597c1;
    --_DARKER_PINK: #f174ac;
    --_ROUND: 8px;
    font-family: "Mikado Regular", sans-serif;
    font-size: 1.2em;
    background-color: var(--_LIGHT_PINK);
    --_DEFAULT: url("valentinescursors/spade.cur"), default;
    --_POINTER: url("valentinescursors/cupid.cur"), pointer;
    --_TEXT: url("valentinescursors/pin.cur"), text;
    cursor: var(--_DEFAULT);
    caret-color: var(--_DARKER_PINK)
}

#princess {
    text-shadow: -2px 2px 3px rgba(0, 0, 0, 0.1)
}

.social {
    width: 100%;
    position: relative;
    text-underline-offset: 3px;
}

nav {
    /* display: inline-grid; */
    margin-bottom: 10px
}

.social::before {
    content: '';
    position: absolute;
    top: 50%;
    left: -10%;
    transform: translate(-50%, -50%);
    width: 20px;
    height: 20px;
    display: inline-block;
    background-size: 100%;
    vertical-align: baseline;
}

#roblox::before {
    width: 22px;
    height: 22px;
    left: -15%;
    background-image: url(data:image/svg+xml,%3C!DOCTYPE%20svg%20PUBLIC%20%22-%2F%2FW3C%2F%2FDTD%20SVG%201.1%2F%2FEN%22%20%22http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11.dtd%22%3E%0A%3Csvg%20width%3D%22800px%22%20height%3D%22800px%22%20viewBox%3D%220%200%20192%20192%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20fill%3D%22none%22%3E%0A%0A%3Cg%20id%3D%22SVGRepo_bgCarrier%22%20stroke-width%3D%220%22%2F%3E%0A%0A%3Cg%20id%3D%22SVGRepo_tracerCarrier%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%0A%0A%3Cg%20id%3D%22SVGRepo_iconCarrier%22%3E%0A%0A%3Cpath%20stroke%3D%22%23f174ac%22%20stroke-linejoin%3D%22round%22%20stroke-width%3D%2212%22%20d%3D%22M29.88%2057.549%20133.845%2029.69l27.857%20103.967-103.966%2027.857z%22%2F%3E%0A%0A%3Cpath%20stroke%3D%22%23f174ac%22%20stroke-linejoin%3D%22round%22%20stroke-width%3D%2212%22%20d%3D%22m80%2087%2025.114-6.73%206.73%2025.115-25.115%206.73z%22%2F%3E%0A%0A%3C%2Fg%3E%0A%0A%3C%2Fsvg%3E)
}

#tiktok::before {
    width: 17px;
    height: 17px;
    left: -30%;
    background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2296%22%20height%3D%2296%22%20viewBox%3D%220%200%2096%2096%22%20fill%3D%22none%22%3E%0A%3Crect%20width%3D%2296%22%20height%3D%2296%22%20rx%3D%2221%22%20fill%3D%22%23f174ac%22%20style%3D%22fill%3A%23f174ac%3Bfill-opacity%3A1%3B%22%2F%3E%0A%3Cpath%20d%3D%22M73.31%2025.7456C72.785%2025.4743%2072.274%2025.1769%2071.7788%2024.8545C70.3389%2023.9025%2069.0186%2022.7808%2067.8465%2021.5135C64.9139%2018.158%2063.8186%2014.7538%2063.4151%2012.3705H63.4313C63.0943%2010.3921%2063.2337%209.11214%2063.2547%209.11214H49.8974V60.7624C49.8974%2061.4558%2049.8974%2062.1412%2049.8682%2062.8185C49.8682%2062.9027%2049.8601%2062.9805%2049.8553%2063.0712C49.8553%2063.1085%2049.8553%2063.1474%2049.8472%2063.1863C49.8472%2063.196%2049.8472%2063.2057%2049.8472%2063.2154C49.7064%2065.0686%2049.1123%2066.8588%2048.1173%2068.4286C47.1222%2069.9983%2045.7566%2071.2994%2044.1407%2072.2175C42.4565%2073.1757%2040.5517%2073.6782%2038.614%2073.6757C32.3906%2073.6757%2027.3468%2068.6011%2027.3468%2062.334C27.3468%2056.0669%2032.3906%2050.9923%2038.614%2050.9923C39.7921%2050.9912%2040.9629%2051.1766%2042.083%2051.5415L42.0992%2037.9412C38.6989%2037.502%2035.2444%2037.7722%2031.9538%2038.7348C28.6631%2039.6975%2025.6077%2041.3317%2022.9802%2043.5343C20.678%2045.5346%2018.7425%2047.9214%2017.2608%2050.5872C16.6969%2051.5594%2014.5695%2055.4658%2014.3119%2061.8058C14.1499%2065.4044%2015.2306%2069.1326%2015.7458%2070.6734V70.7058C16.0699%2071.6132%2017.3256%2074.7094%2019.372%2077.3197C21.0221%2079.4135%2022.9716%2081.2527%2025.1579%2082.7783V82.7459L25.1903%2082.7783C31.6567%2087.1724%2038.8263%2086.884%2038.8263%2086.884C40.0674%2086.8338%2044.2249%2086.884%2048.9463%2084.6464C54.183%2082.1658%2057.1642%2078.47%2057.1642%2078.47C59.0688%2076.2618%2060.5832%2073.7452%2061.6426%2071.0282C62.8513%2067.8509%2063.2547%2064.0401%2063.2547%2062.5171V35.1155C63.4168%2035.2127%2065.5749%2036.6401%2065.5749%2036.6401C65.5749%2036.6401%2068.6842%2038.633%2073.5352%2039.9309C77.0155%2040.8544%2081.7045%2041.0488%2081.7045%2041.0488V27.7887C80.0615%2027.9669%2076.7255%2027.4485%2073.31%2025.7456Z%22%20fill%3D%22white%22%20style%3D%22fill%3Awhite%3Bfill-opacity%3A1%3B%22%2F%3E%0A%3C%2Fsvg%3E);
}
/* ... */

